--- a/_posts/2015-01-02-rails4-tdd.md
+++ b/_posts/2015-01-02-rails4-tdd.md
@@ -1,14 +1,11 @@
 ---
 layout: post
-title: "Rails4 TDD環境の構築"
+title: "Rails4.2 / Spring / Guard / Rspec + CapybaraでTDD環境"
 description: ""
 category: 
-tags: []
 ---
 {% include JB/setup %}
 
-# Rails4.2 / Spring / Guard / Rspec + CapybaraでTDD環境
- 
 ## Gemfile
 ```
 group :development, :test do
